Add ArrowSTradeVectorReaderOffHeap for off-heap trade analysis
Introduced a new utility class `ArrowSTradeVectorReaderOffHeap` leveraging off-heap memory and the Vector API for efficient trade data analysis from Arrow files. Updated README with usage instructions and added performance logging enhancements to existing OffHeapReader.